@@ -1,3 +1,9 @@
+2007-05-03  Andreas Kupries  <andreask@activestate.com>
+
+	* sha1.tcl: Force-define loop variable for accel loader, so
+	* sha256.tcl: that sak will not fail in the unset when looking
+	  for the package version via restricted eval.
+
 2007-03-25  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* sha256.c: gcc 4 has decided that assignment to a cast pointer is
